src/main/java/org/fergonco/music/mjargon/antlr/MJargonParser.java
// Generated from MJargon.g4 by ANTLR 4.0

package org.fergonco.music.mjargon.antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MJargonParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NUMBER=1, RHYTHMEXPRESSION=2, SLASH=3, VERTICAL_BAR=4, COLON=5, EQUALS=6, 
		OPEN_BRACE=7, CLOSE_BRACE=8, OPEN_PARENTHESIS=9, CLOSE_PARENTHESIS=10, 
		UNDERSCORE=11, COMMENT=12, ON=13, TEMPO=14, REPEAT=15, VOICES=16, DYNAMICS=17, 
		DYNAMIC=18, DRUM_INSTRUMENT=19, CHORD_LITERAL=20, STRING_LITERAL=21, ID=22, 
		EOL=23, TS=24;
	public static final String[] tokenNames = {
		"<INVALID>", "NUMBER", "RHYTHMEXPRESSION", "'/'", "'|'", "':'", "'='", 
		"OPEN_BRACE", "CLOSE_BRACE", "OPEN_PARENTHESIS", "CLOSE_PARENTHESIS", 
		"'_'", "COMMENT", "'on'", "'tempo'", "'repeat'", "'voices'", "'dynamics'", 
		"DYNAMIC", "DRUM_INSTRUMENT", "CHORD_LITERAL", "STRING_LITERAL", "ID", 
		"EOL", "TS"
	};
	public static final int
		RULE_script = 0, RULE_scriptLine = 1, RULE_comment = 2, RULE_declaration = 3, 
		RULE_variableDeclaration = 4, RULE_expression = 5, RULE_numericExpression = 6, 
		RULE_stringLiteral = 7, RULE_referenceExpression = 8, RULE_onRhythm = 9, 
		RULE_parameters = 10, RULE_rhythmExpression = 11, RULE_pitchSequenceExpression = 12, 
		RULE_drumSequenceExpression = 13, RULE_labelDeclaration = 14, RULE_barline = 15, 
		RULE_tempo = 16, RULE_voices = 17, RULE_dynamics = 18, RULE_repeat = 19;
	public static final String[] ruleNames = {
		"script", "scriptLine", "comment", "declaration", "variableDeclaration", 
		"expression", "numericExpression", "stringLiteral", "referenceExpression", 
		"onRhythm", "parameters", "rhythmExpression", "pitchSequenceExpression", 
		"drumSequenceExpression", "labelDeclaration", "barline", "tempo", "voices", 
		"dynamics", "repeat"
	};

	@Override
	public String getGrammarFileName() { return "MJargon.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public MJargonParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ScriptContext extends ParserRuleContext {
		public ScriptLineContext scriptLine;
		public List<ScriptLineContext> lines = new ArrayList<ScriptLineContext>();
		public List<ScriptLineContext> scriptLine() {
			return getRuleContexts(ScriptLineContext.class);
		}
		public TerminalNode EOF() { return getToken(MJargonParser.EOF, 0); }
		public ScriptLineContext scriptLine(int i) {
			return getRuleContext(ScriptLineContext.class,i);
		}
		public ScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_script; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MJargonListener ) ((MJargonListener)listener).enterScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MJargonListener ) ((MJargonListener)listener).exitScript(this);
		}
	}

	public final ScriptContext script() throws RecognitionException {
		ScriptContext _localctx = new ScriptContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_script);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VERTICAL_BAR) | (1L << COMMENT) | (1L << TEMPO) | (1L << REPEAT) | (1L << VOICES) | (1L << DYNAMICS) | (1L << ID))) != 0)) {
				{
				{
				setState(40); ((ScriptContext)_localctx).scriptLine = scriptLine();
				((ScriptContext)_localctx).lines.add(((ScriptContext)_localctx).scriptLine);
				}
				}
				setState(45);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(46); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScriptLineContext extends ParserRuleContext {
		public DynamicsContext dynamics() {
			return getRuleContext(DynamicsContext.class,0);
		}
		public TerminalNode EOL() { return getToken(MJargonParser.EOL, 0); }
		public BarlineContext barline() {
			return getRuleContext(BarlineContext.class,0);
		}
		public RepeatContext repeat() {
			return getRuleContext(RepeatContext.class,0);
		}
		public VoicesContext voices() {
			return getRuleContext(VoicesContext.class,0);
		}
		public TempoContext tempo() {
			return getRuleContext(TempoContext.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public ScriptLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scriptLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MJargonListener ) ((MJargonListener)listener).enterScriptLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MJargonListener ) ((MJargonListener)listener).exitScriptLine(this);
		}
	}

	public final ScriptLineContext scriptLine() throws RecognitionException {
		ScriptLineContext _localctx = new ScriptLineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_scriptLine);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			switch (_input.LA(1)) {
			case COMMENT:
				{
				setState(48); comment();
				}
				break;
			case ID:
				{
				setState(49); declaration();
				}
				break;
			case VERTICAL_BAR:
				{
				setState(50); barline();
				}
				break;
			case TEMPO:
				{
				setState(51); tempo();
				}
				break;
			case VOICES:
				{
				setState(52); voices();
				}
				break;
			case DYNAMICS:
				{
				setState(53); dynamics();
				}
				break;
			case REPEAT:
				{
				setState(54); repeat();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(57); match(EOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommentContext extends ParserRuleContext {
		public TerminalNode COMMENT() { return getToken(MJargonParser.COMMENT, 0); }
		public CommentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MJargonListener ) ((MJargonListener)listener).enterComment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MJargonListener ) ((MJargonListener)listener).exitComment(this);
		}
	}

	public final CommentContext comment() throws RecognitionException {
		CommentContext _localctx = new CommentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_comment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59); match(COMMENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public Token id;
		public TerminalNode ID() { return getToken(MJargonParser.ID, 0); }
		public LabelDeclarationContext labelDeclaration() {
			return getRuleContext(LabelDeclarationContext.class,0);
		}
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MJargonListener ) ((MJargonListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MJargonListener ) ((MJargonListener)listener).exitDeclaration(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61); ((DeclarationContext)_localctx).id = match(ID);
			setState(64);
			switch (_input.LA(1)) {
			case EQUALS:
				{
				setState(62); variableDeclaration();
				}
				break;
			case COLON:
				{
				setState(63); labelDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclarationContext extends ParserRuleContext {
		public ExpressionContext value;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode EQUALS() { return getToken(MJargonParser.EQUALS, 0); }
		public VariableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MJargonListener ) ((MJargonListener)listener).enterVariableDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MJargonListener ) ((MJargonListener)listener).exitVariableDeclaration(this);
		}
	}

	public final VariableDeclarationContext variableDeclaration() throws RecognitionException {
		VariableDeclarationContext _localctx = new VariableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_variableDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66); match(EQUALS);
			setState(67); ((VariableDeclarationContext)_localctx).value = expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public PitchSequenceExpressionContext pitchSequenceExpression() {
			return getRuleContext(PitchSequenceExpressionContext.class,0);
		}
		public StringLiteralContext stringLiteral() {
			return getRuleContext(StringLiteralContext.class,0);
		}
		public ReferenceExpressionContext referenceExpression() {
			return getRuleContext(ReferenceExpressionContext.class,0);
		}
		public NumericExpressionContext numericExpression() {
			return getRuleContext(NumericExpressionContext.class,0);
		}
		public RhythmExpressionContext rhythmExpression() {
			return getRuleContext(RhythmExpressionContext.class,0);
		}
		public DrumSequenceExpressionContext drumSequenceExpression() {
			return getRuleContext(DrumSequenceExpressionContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MJargonListener ) ((MJargonListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MJargonListener ) ((MJargonListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			switch (_input.LA(1)) {
			case NUMBER:
				{
				setState(69); numericExpression();
				}
				break;
			case STRING_LITERAL:
				{
				setState(70); stringLiteral();
				}
				break;
			case ID:
				{
				setState(71); referenceExpression();
				}
				break;
			case RHYTHMEXPRESSION:
				{
				setState(72); rhythmExpression();
				}
				break;
			case UNDERSCORE:
			case CHORD_LITERAL:
				{
				setState(73); pitchSequenceExpression();
				}
				break;
			case DRUM_INSTRUMENT:
				{
				setState(74); drumSequenceExpression();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumericExpressionContext extends ParserRuleContext {
		public Token numerator;
		public Token denominator;
		public List<TerminalNode> NUMBER() { return getTokens(MJargonParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(MJargonParser.NUMBER, i);
		}
		public TerminalNode SLASH() { return getToken(MJargonParser.SLASH, 0); }
		public NumericExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numericExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MJargonListener ) ((MJargonListener)listener).enterNumericExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MJargonListener ) ((MJargonListener)listener).exitNumericExpression(this);
		}
	}

	public final NumericExpressionContext numericExpression() throws RecognitionException {
		NumericExpressionContext _localctx = new NumericExpressionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_numericExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77); ((NumericExpressionContext)_localctx).numerator = match(NUMBER);
			setState(80);
			_la = _input.LA(1);
			if (_la==SLASH) {
				{
				setState(78); match(SLASH);
				setState(79); ((NumericExpressionContext)_localctx).denominator = match(NUMBER);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringLiteralContext extends ParserRuleContext {
		public TerminalNode STRING_LITERAL() { return getToken(MJargonParser.STRING_LITERAL, 0); }
		public StringLiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stringLiteral; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MJargonListener ) ((MJargonListener)listener).enterStringLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MJargonListener ) ((MJargonListener)listener).exitStringLiteral(this);
		}
	}

	public final StringLiteralContext stringLiteral() throws RecognitionException {
		StringLiteralContext _localctx = new StringLiteralContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_stringLiteral);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82); match(STRING_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReferenceExpressionContext extends ParserRuleContext {
		public Token id;
		public OnRhythmContext onRhythm() {
			return getRuleContext(OnRhythmContext.class,0);
		}
		public TerminalNode ID() { return getToken(MJargonParser.ID, 0); }
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public ReferenceExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_referenceExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MJargonListener ) ((MJargonListener)listener).enterReferenceExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MJargonListener ) ((MJargonListener)listener).exitReferenceExpression(this);
		}
	}

	public final ReferenceExpressionContext referenceExpression() throws RecognitionException {
		ReferenceExpressionContext _localctx = new ReferenceExpressionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_referenceExpression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84); ((ReferenceExpressionContext)_localctx).id = match(ID);
			setState(88);
			switch (_input.LA(1)) {
			case ON:
				{
				setState(85); onRhythm();
				}
				break;
			case OPEN_PARENTHESIS:
				{
				setState(86); parameters();
				}
				break;
			case VERTICAL_BAR:
			case CLOSE_PARENTHESIS:
			case EOL:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OnRhythmContext extends ParserRuleContext {
		public ExpressionContext rhythm;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode ON() { return getToken(MJargonParser.ON, 0); }
		public OnRhythmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_onRhythm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MJargonListener ) ((MJargonListener)listener).enterOnRhythm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MJargonListener ) ((MJargonListener)listener).exitOnRhythm(this);
		}
	}

	public final OnRhythmContext onRhythm() throws RecognitionException {
		OnRhythmContext _localctx = new OnRhythmContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_onRhythm);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90); match(ON);
			setState(91); ((OnRhythmContext)_localctx).rhythm = expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametersContext extends ParserRuleContext {
		public ExpressionContext expression;
		public List<ExpressionContext> parameterValues = new ArrayList<ExpressionContext>();
		public TerminalNode OPEN_PARENTHESIS() { return getToken(MJargonParser.OPEN_PARENTHESIS, 0); }
		public TerminalNode CLOSE_PARENTHESIS() { return getToken(MJargonParser.CLOSE_PARENTHESIS, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameters; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MJargonListener ) ((MJargonListener)listener).enterParameters(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MJargonListener ) ((MJargonListener)listener).exitParameters(this);
		}
	}

	public final ParametersContext parameters() throws RecognitionException {
		ParametersContext _localctx = new ParametersContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_parameters);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93); match(OPEN_PARENTHESIS);
			setState(94); ((ParametersContext)_localctx).expression = expression();
			((ParametersContext)_localctx).parameterValues.add(((ParametersContext)_localctx).expression);
			setState(95); match(CLOSE_PARENTHESIS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RhythmExpressionContext extends ParserRuleContext {
		public Token value;
		public ExpressionContext timeSignature;
		public TerminalNode RHYTHMEXPRESSION() { return getToken(MJargonParser.RHYTHMEXPRESSION, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode ON() { return getToken(MJargonParser.ON, 0); }
		public RhythmExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rhythmExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MJargonListener ) ((MJargonListener)listener).enterRhythmExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MJargonListener ) ((MJargonListener)listener).exitRhythmExpression(this);
		}
	}

	public final RhythmExpressionContext rhythmExpression() throws RecognitionException {
		RhythmExpressionContext _localctx = new RhythmExpressionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_rhythmExpression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97); ((RhythmExpressionContext)_localctx).value = match(RHYTHMEXPRESSION);
			setState(98); match(ON);
			setState(99); ((RhythmExpressionContext)_localctx).timeSignature = expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PitchSequenceExpressionContext extends ParserRuleContext {
		public Token CHORD_LITERAL;
		public List<Token> notes = new ArrayList<Token>();
		public Token UNDERSCORE;
		public List<TerminalNode> UNDERSCORE() { return getTokens(MJargonParser.UNDERSCORE); }
		public TerminalNode UNDERSCORE(int i) {
			return getToken(MJargonParser.UNDERSCORE, i);
		}
		public TerminalNode CHORD_LITERAL(int i) {
			return getToken(MJargonParser.CHORD_LITERAL, i);
		}
		public List<TerminalNode> CHORD_LITERAL() { return getTokens(MJargonParser.CHORD_LITERAL); }
		public PitchSequenceExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pitchSequenceExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MJargonListener ) ((MJargonListener)listener).enterPitchSequenceExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MJargonListener ) ((MJargonListener)listener).exitPitchSequenceExpression(this);
		}
	}

	public final PitchSequenceExpressionContext pitchSequenceExpression() throws RecognitionException {
		PitchSequenceExpressionContext _localctx = new PitchSequenceExpressionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_pitchSequenceExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(103);
				switch (_input.LA(1)) {
				case CHORD_LITERAL:
					{
					setState(101); ((PitchSequenceExpressionContext)_localctx).CHORD_LITERAL = match(CHORD_LITERAL);
					((PitchSequenceExpressionContext)_localctx).notes.add(((PitchSequenceExpressionContext)_localctx).CHORD_LITERAL);
					}
					break;
				case UNDERSCORE:
					{
					setState(102); ((PitchSequenceExpressionContext)_localctx).UNDERSCORE = match(UNDERSCORE);
					((PitchSequenceExpressionContext)_localctx).notes.add(((PitchSequenceExpressionContext)_localctx).UNDERSCORE);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(105); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==UNDERSCORE || _la==CHORD_LITERAL );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DrumSequenceExpressionContext extends ParserRuleContext {
		public Token DRUM_INSTRUMENT;
		public List<Token> instruments = new ArrayList<Token>();
		public TerminalNode DRUM_INSTRUMENT(int i) {
			return getToken(MJargonParser.DRUM_INSTRUMENT, i);
		}
		public List<TerminalNode> DRUM_INSTRUMENT() { return getTokens(MJargonParser.DRUM_INSTRUMENT); }
		public DrumSequenceExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_drumSequenceExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MJargonListener ) ((MJargonListener)listener).enterDrumSequenceExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MJargonListener ) ((MJargonListener)listener).exitDrumSequenceExpression(this);
		}
	}

	public final DrumSequenceExpressionContext drumSequenceExpression() throws RecognitionException {
		DrumSequenceExpressionContext _localctx = new DrumSequenceExpressionContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_drumSequenceExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(107); ((DrumSequenceExpressionContext)_localctx).DRUM_INSTRUMENT = match(DRUM_INSTRUMENT);
				((DrumSequenceExpressionContext)_localctx).instruments.add(((DrumSequenceExpressionContext)_localctx).DRUM_INSTRUMENT);
				}
				}
				setState(110); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DRUM_INSTRUMENT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LabelDeclarationContext extends ParserRuleContext {
		public TerminalNode VERTICAL_BAR(int i) {
			return getToken(MJargonParser.VERTICAL_BAR, i);
		}
		public List<TerminalNode> VERTICAL_BAR() { return getTokens(MJargonParser.VERTICAL_BAR); }
		public TerminalNode COLON() { return getToken(MJargonParser.COLON, 0); }
		public LabelDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_labelDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MJargonListener ) ((MJargonListener)listener).enterLabelDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MJargonListener ) ((MJargonListener)listener).exitLabelDeclaration(this);
		}
	}
